[workspace]
members = [
  "zorvix-client",
  "zorvix-server",
  "zorvix-common",
  "zorvix-editor"
]
resolver = "2"

[workspace.dependencies]
bevy = "0.10.0"
bevy_quinnet = "0.4.0"
bincode = "1.3.3"
directories = "4.0.1"
ron = "0.8.0"
serde = "1.0.154"
itertools = "0.10.5"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = false #Change this to be per platform windows doesn't seem to like it
