[workspace]
members = [
  "zorvix",
  "zorvix-common",
  "zorvix-editor"
]
resolver = "2"

[workspace.dependencies]
bevy = "0.10.0"
bincode = "1.3.3"
directories = "4.0.1"
ron = "0.8.0"
serde = "1.0.154"
itertools = "0.10.5"
rand = "0.8.5"
bevy_egui = "0.20.2"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = false #Change this to be per platform windows doesn't seem to like it
